@@ -1,4 +1,6 @@
 DFHack future
+    New script:
+        - adaptation: view or set the cavern adaptation level of your citizens
 
 DFHack 0.40.13-r1
     Internals:
@@ -14,7 +16,7 @@ DFHack 0.40.12-r1
 
     New plugins:
         - hotkeys (by Falconne): Shows ingame viewscreen with all dfhack keybindings active in current mode.
-        - automelt: allows marking stockpiles for automelt (i.e. any items placed in stocpile will be designated for melting)
+        - automelt: allows marking stockpiles for automelt (i.e. any items placed in stockpile will be designated for melting)
 
     Misc Improvements:
         - now you can use @ to print things in interactive Lua with subtley different semantics
